--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = FusionDevices/android_device_xiaomi_santoni
 [access "refs/*"]
 	owner = group user/Tab Fitts (tabp0le)
 [access "refs/for/refs/*"]
